[package]
name = "swamp-codegen"
version = "0.1.0"
authors = ["Damien Broka <damienbroka@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
Inflector = "0.11.4"
tonic-build = "*"
