[package]
name = "swamp"
version = "0.1.0"
authors = ["Damien Broka <damienbroka@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }

swamp-build = { path = "../swamp-build" }
swamp-codegen = { path = "../swamp-codegen" }

sha2 = "*"
pretty_assertions = "0.6.1"
regex = "1.3.7"
